<resources>
    <string name="app_name">Tic Tac Toe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">PLAY</string>
    <string name="playagain">PLAY AGAIN</string>
    <string name="tic">TIC</string>
    <string name="tac">TAC</string>
    <string name="toe">TOE</string>
    <string name="about">About</string>
    <string name="rules">
        1. Game is played on a 3 by 3 grid of 9 squares.\n\n2. Two players take turns marking squares, the first marking Xs, the second Os.\n\n3. A row is any three squares on the grid placed diagonally, vertically or horizontally.\n\n4. If one player places three of the same marks in a row, the player wins.\n\n5. If the spaces are all filled and there is no winner, the game ends in a draw.
    </string>
    <string name="abouttext">
        Tic-Tac-Toe is a popular simple game enjoyed by young and old alike. The game is also called noughts and crosses or Xs and Os and is traditionally played by being drawn on paper. With this app, you can enjoy this simple game without being bound to use paper and pen.
    </string>
</resources>
