<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/aboutscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/abouttitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/tic"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/tic"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/abouttitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/tac"
                    android:textColor="@color/tac"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/abouttitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/toe"
                    android:textAlignment="viewStart"
                    android:textColor="@color/tic"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/titan_one"
                android:soundEffectsEnabled="false"
                android:text="ABOUT"
                android:textAlignment="center"
                android:textColor="@color/tac"
                android:textSize="36sp" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baloo"
                android:text="@string/abouttext"
                android:textColor="#000000"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>